SoDa version 1.1 is the first release of the SoDa software. 

sic transit gloria thursdi
